Mask refactor
Simplified use of masks and enumerations
Renamed to BitField